# adaptive-limiting

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
haproxy/: haproxy.cfg
k8s/: deployment.yaml  service.yaml
src/: handlers.rs  lib.rs  main.rs  models.rs
