[package]
name = "adaptive-limiting"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0", features = ["derive"] }
actix-rt = "2.10.0"
log = "0.4.22"
serde_json = "1.0.132"
simple_logger = {  version = "5.0.0", default-features = false, features = ["colors"] }
hostname = "0.4.0"
